seems to be working

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,6 @@
 <body>
     <div id='AddButton'>+</div>
     <ul id='List'></ul>
-    <script src='app.js'></script>
+    <script src='/app.js'></script>
 </body>
 </html>
